--- a/Front/login.html
+++ b/Front/login.html
@@ -5,38 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Login biblioteca</title>
 </head>
 
-<body>
-    <div>
-        <div>
-            <h1>Inicia sesion con tu cuenta</h1>
-            <form action="">
-                <div>
-                    <input type="text" required="" maxlength="70">
-                    <span></span>
-                    <span></span>
-                    <label>&nbsp; Nombres</label>
-                </div> <br>
-                <div>
-                    <input type="password" required="" maxlength="70">
-                    <span></span>
-                    <span></span>
-                    <label>&nbsp; Contrasena</label>
-                </div>
-                <div>
-                    <select>
-                        <option value="" disabled="" selected="">Tipo de usuario</option>
-                        <option value="Admin"> Adiministrador</option>
-                        <option value="Client">Cliente</option>
-                    </select>
-                </div>
-                <button type="submit">Ingresar al sistema &nbsp;</button>
-            </form>
-        </div>
-    </div>
+<body class="text-center">
+    <main class="form-signin w-100 m-auto">
+        <form>
+            <h1 class="h3 mb-3 fw-normal">INICIO DE SESION</h1>
+
+            <div class="form-floating">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Correo electronico</label>
+            </div>
+
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña">
+                <label for="floatingPassword">Contraseña</label>
+            </div>
+
+            <div class="form-floating">
+                <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                    <option value="Administrador">Administrador</option>
+                    <option value="Cliente">Cliente</option>
+                </select>
+                <label for="floatingSelect">Seleccion su tipo de usario</label>
+            </div>
+
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
+            <p class="mt-5 mb-3 text-muted">&copy; Grupo 15 ciclo 3</p>
+        </form>
+        </form>
+
+    </main>
 </body>
 
 </html>
