--- a/Front/login.html
+++ b/Front/login.html
@@ -34,7 +34,9 @@
                 <label for="floatingSelect">Seleccion su tipo de usario</label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit"><a href="principal.html"
+                    class="link-dark text-light">
+                    Entrar</a></button>
             <p class="mt-5 mb-3 text-muted">&copy; Grupo 15 ciclo 3</p>
         </form>
     </main>
