Creacion interfaces faltantes aplicacion de nav y el sidebar

--- a/Front/principal.html
+++ b/Front/principal.html
@@ -39,29 +39,28 @@
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="#" class="nav-link text-white text-center">
+                            <a href="listaLibros.html" class="nav-link text-white text-center">
                                 Lista de Libros
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link text-white text-center">
+                            <a href="RegistroLibros.html" class="nav-link text-white text-center">
                                 Registro de libros
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link text-white text-center">
+                            <a href="DatosUsuario.html" class="nav-link text-white text-center">
                                 Datos Usuario
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link text-white text-center">
+                            <a href="Contacto.html" class="nav-link text-white text-center">
                                 Contacto
                             </a>
                         </li>
                     </ul>
             </nav>
         </div>
-    </div>
     </div>
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 text-bg-light">
         <h1 class="fw-normal text-center">¡¡¡LISTO PARA LEER!!!</h1>
