--- a/Front/listaLibros.html
+++ b/Front/listaLibros.html
@@ -61,7 +61,10 @@
             </nav>
         </div>
     </div>
-
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 text-bg-light">
+        <h1>LISTO PARA EXPLORAR</h1>
+        <p> A un click de que puedas explorar nuevos mundos</p>
+    </main>
 </body>
 
 </html>
