--- a/Back/libreria-sb/src/main/resources/static/login.html
+++ b/Back/libreria-sb/src/main/resources/static/login.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Login biblioteca</title>
 </head>
@@ -33,6 +32,8 @@
                 </select>
                 <label for="floatingSelect">Seleccion su tipo de usario</label>
             </div>
+
+            <a class="link-dark h6" href="">No tienes cuenta? REGISTRATE</a>
 
             <button class="w-100 btn btn-lg btn-primary" type="submit"><a href="principal.html"
                     class="link-dark text-light">
