Controlador y navegacion con este

--- a/Back/libreria-sb/src/main/resources/static/index.html
+++ b/Back/libreria-sb/src/main/resources/static/index.html
@@ -35,7 +35,7 @@
 
             <a class="link-dark h6" href="">No tienes cuenta? REGISTRATE</a>
 
-            <button class="w-100 btn btn-lg btn-primary" type="submit"><a href="principal.html"
+            <button class="w-100 btn btn-lg btn-primary" type="submit"><a href="/principal"
                     class="link-dark text-light">
                     Entrar</a></button>
             <p class="mt-5 mb-3 text-muted">&copy; Grupo 15 ciclo 3</p>
